--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,271 @@
-# frappe -- https://github.com/frappe/frappe is installed via 'bench init'
+aiofiles==23.2.1
+aiohttp==3.8.6
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==3.7.1
+apturl==0.5.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.8
+async-generator==1.10
+async-timeout==4.0.3
+asyncer==0.0.2
+attrs==22.1.0
+autobahn==19.11.2
+Automat==20.2.0
+backcall==0.2.0
+backoff==2.2.1
+bcrypt==3.2.0
+beautifulsoup4==4.11.1
+bidict==0.22.1
+bleach==5.0.1
+blinker==1.4
+Brlapi==0.8.3
+bson==0.5.10
+certifi==2022.9.24
+cffi==1.15.1
+chainlit==0.7.301
+chardet==4.0.0
+charset-normalizer==3.3.1
+click==8.1.7
+colorama==0.4.4
+command-not-found==0.3
+constantly==15.1.0
+contourpy==1.0.5
+cryptography==38.0.1
+cupshelpers==1.0
+cycler==0.11.0
+dataclasses-json==0.5.14
+dbus-python==1.2.18
+debugpy==1.6.3
+decorator==5.1.1
+defer==1.0.6
+defusedxml==0.7.1
+Deprecated==1.2.14
+distlib==0.3.7
+distro==1.7.0
+distro-info==1.1+ubuntu0.1
+duplicity==0.8.21
+entrypoints==0.4
+enum34==1.1.10
+exceptiongroup==1.0.0rc9
+executing==1.1.0
+fairscale==0.4.13
+fastapi==0.100.1
+fastapi-socketio==0.0.10
+fasteners==0.14.1
+fastjsonschema==2.16.2
+filelock==3.12.4
+filetype==1.2.0
+fire==0.5.0
+Flask==2.2.2
+fonttools==4.37.4
+frappe-bench==5.17.1
+frozenlist==1.4.0
+fsspec==2023.10.0
+future==0.18.2
+gguf==0.4.5
+gitdb==4.0.10
+GitPython==3.1.34
+googleapis-common-protos==1.61.0
+grpcio==1.59.0
+h11==0.14.0
+honcho==1.1.0
+httpcore==0.18.0
+httplib2==0.20.2
+httpx==0.25.0
+hyperlink==21.0.0
+idna==3.3
+importlib-metadata==6.8.0
+incremental==21.3.0
+ipykernel==6.16.0
+ipython==8.5.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.2
+itsdangerous==2.1.2
+jedi==0.18.1
+jeepney==0.7.1
+Jinja2==3.0.3
+jsonschema==4.16.0
+jupyter==1.0.0
+jupyter-console==6.4.4
+jupyter-core==4.11.1
+jupyter_client==7.3.5
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.3
+keyring==23.5.0
+kiteconnect==4.1.0
+kiwisolver==1.4.4
+language-selector==0.1
+launchpadlib==1.10.16
+Lazify==0.4.0
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+-e git+https://github.com/facebookresearch/llama.git@06faf3aab2971e7931e3d5b41e53c4a614d5bad7#egg=llama
+lockfile==0.12.2
+louis==3.20.0
+lxml==4.9.1
+macaroonbakery==1.3.1
+Mako==1.1.3
+MarkupSafe==2.1.1
+marshmallow==3.20.1
+matplotlib==3.6.0
+matplotlib-inline==0.1.6
+mibian==0.1.3
+mistune==2.0.4
+mock==4.0.3
+monotonic==1.6
+more-itertools==8.10.0
+mpmath==1.3.0
+multidict==6.0.4
+mypy-extensions==1.0.0
+mysql-connector-python==8.0.30
+nbclient==0.6.8
+nbconvert==7.0.0
+nbformat==5.6.1
+nest-asyncio==1.5.6
+netifaces==0.11.0
+networkx==3.2
+nodeenv==1.8.0
+notebook==6.4.12
+numpy==1.24.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.3.52
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.0
+olefile==0.46
+opentelemetry-api==1.20.0
+opentelemetry-exporter-otlp==1.20.0
+opentelemetry-exporter-otlp-proto-common==1.20.0
+opentelemetry-exporter-otlp-proto-grpc==1.20.0
+opentelemetry-exporter-otlp-proto-http==1.20.0
+opentelemetry-instrumentation==0.41b0
+opentelemetry-proto==1.20.0
+opentelemetry-sdk==1.20.0
+opentelemetry-semantic-conventions==0.41b0
+outcome==1.2.0
+packaging==23.2
+pandas==1.5.0
+pandocfilters==1.5.0
+paramiko==2.9.3
+parso==0.8.3
+patsy==0.5.2
+pbr==5.8.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.0.1
+platformdirs==3.11.0
+prisma==0.10.0
+prometheus-client==0.14.1
+prompt-toolkit==3.0.31
+protobuf==4.24.4
+psutil==5.9.2
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.20.1
+pycparser==2.21
+pycups==2.0.1
+pydantic==2.4.2
+pydantic_core==2.10.1
+Pygments==2.13.0
+PyGObject==3.42.1
+PyJWT==2.8.0
+pymacaroons==0.13.0
+pymongo==4.2.0
+PyNaCl==1.5.0
+pyOpenSSL==22.1.0
+pyparsing==2.4.7
+PyQt5==5.15.6
+PyQt5-sip==12.9.1
+PyQtWebEngine==5.15.5
+pyRFC3339==1.1
+pyrsistent==0.18.1
+PySocks==1.7.1
+python-apt==2.4.0+ubuntu2
+python-crontab==2.6.0
+python-dateutil==2.8.2
+python-debian==0.1.43+ubuntu1.1
+python-dotenv==1.0.0
+python-engineio==4.8.0
+python-graphql-client==0.4.3
+python-multipart==0.0.6
+python-socketio==5.10.0
+pytz==2022.1
+pyxdg==0.27
+PyYAML==5.4.1
+pyzmq==24.0.1
+qtconsole==5.3.2
+QtPy==2.2.0
+reportlab==3.6.8
+requests==2.25.1
+scipy==1.9.1
+screen-resolution-extra==0.0.0
+SecretStorage==3.3.1
+selenium==4.5.0
+semantic-version==2.8.5
+Send2Trash==1.8.0
+sentencepiece==0.1.98
+service-identity==21.1.0
+simple-websocket==1.0.0
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+stack-data==0.5.1
+starlette==0.27.0
+statsmodels==0.13.2
+sympy==1.12
+syncer==2.0.3
+systemd-python==234
+TA-Lib==0.4.25
+telebot==0.0.4
+termcolor==2.3.0
+terminado==0.16.0
+tinycss2==1.1.1
+tomli==2.0.1
+tomlkit==0.12.1
+torch==2.1.0
+tornado==6.2
+traitlets==5.4.0
+trio==0.22.0
+trio-websocket==0.9.2
+triton==2.1.0
+Twisted==22.8.0
+txaio==22.2.1
+typing-inspect==0.9.0
+typing_extensions==4.8.0
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
+unattended-upgrades==0.1
+uptrace==1.20.2
+urllib3==1.26.5
+usb-creator==0.3.7
+uvicorn==0.23.2
+virtualenv==20.24.6
+wadllib==1.3.6
+watchfiles==0.20.0
+wcwidth==0.2.5
+webencodings==0.5.1
+websockets==12.0
+Werkzeug==2.2.2
+widgetsnbextension==4.0.3
+wrapt==1.15.0
+wsproto==1.2.0
+xdg==5
+xkit==0.0.0
+yarl==1.9.2
+zipp==1.0.0
+zope.interface==5.4.0
